--- a/index.html
+++ b/index.html
@@ -2168,10 +2168,10 @@ main {
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Machine Learning</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Deploying machine learning algorithms to analyze data and assisting humanity in overcoming challenges..
                 </p>
               </div>
 
